bad/bin_op_le_string_null.example_compiler_output
ERROR
[1mbad/bin_op_le_string_null.lat:3:5: [1;31merror: [0;1moperator <= is defined only for int values and string values, not `string` and `null`[m
	"" <= null;
	   [1;32m^[m
